# Pharmacy-Information-System-Backend

./: .gitignore  db.py  docker-compose.yml  logging.ini  main.py  models.py  pyproject.toml  readme.md  sample.env  schema.py  settings.py  views.py
admin/: __init__.py  administration_route_view.py  base.py  customer_view.py  doctor_view.py  drug_type_administration_route_view.py  drug_type_view.py  drug_view.py  lab_worker_view.py  mixture_type_view.py  mixture_view.py  order_view.py  order_waiting_drug_supply_view.py  patient_view.py  pill_view.py  powder_view.py  prescription_item_view.py  prescription_view.py  production_lab_workers_view.py  production_view.py  reserved_drug_view.py  salve_view.py  solution_view.py  storage_item_view.py  supplier_view.py  supply_view.py  technology_component_view.py  technology_view.py  tincture_view.py
migrations/: env.py
models/: __init__.py  administration_route.py  customer.py  doctor.py  drug.py  drug_type.py  drug_type_administration_route.py  lab_worker.py  mixture.py  mixture_type.py  order.py  order_waiting_drug_supply.py  patient.py  pill.py  powder.py  prescription.py  prescription_content.py  prescription_item.py  production.py  production_lab_worker.py  reserved_drug.py  salve.py  solution.py  storage_item.py  suppliers.py  supply.py  technology.py  technology_component.py  tincture.py
routing/: customers.py  doctors.py  drug_types.py  drugs.py  orders.py  patients.py  production.py  technologies.py  utils.py
schemas/: __init__.py  customer_order.py  doctor.py  frequent_customer.py  prescription_item.py  (+4 more)
(+149 files in other folders)
